Change Password Successfully

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="content-wrapper">
   <p-confirmDialog></p-confirmDialog>
+  <p-growl [(value)]="notificationMessages"></p-growl>
   <div>
     <section class="content">
       <div class="row">
