--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,6 @@
         </div>
       </form>
     </div>
-    <div *ngIf="response.error_message" class="alert alert-danger mt-10" ng-style="{'margin-top':'10px'}">{{response.error_message}}</div>
-    <!--<div ng-if="message.success" class="alert alert-danger mt-10" ng-style="{'margin-top':'10px'}">{{message.success}}</div>-->
+    <div *ngIf="response.error_message" class="alert alert-danger mt-10" style="margin-top:10px">{{response.error_message}}</div>
   </div>
 </div>
