Fix Module Page

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
   <h1 class="page-header">Profile</h1>
 </div>
-<div class="col-md-12">
+<div class="col-md-6">
   <table class="table panel">
     <tr>
       <td style="width:100px">User Name</td>
@@ -15,8 +15,8 @@
     </tr>
   </table>
 </div>
-<div class="col-md-12">
-  <div class="box box-success">
+<div class="col-md-6">
+  <div class="box box-warning">
     <div class="box-header with-border">
       <h3 class="box-title">Change Password</h3>
     </div>
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="box-footer">
-        <button type="submit" class="btn btn-success">Submit New Password</button>
+        <button type="submit" class="btn btn-primary">Submit New Password</button>
       </div>
     </form>
   </div>
