--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,14 +3,14 @@
     <div class="login-logo">
       <img src="assets/img/aar.png" /> AAR Framework
     </div>
-    <div class="login-box-body">
+    <div class="login-box-body" style="position:relative">
       <p class="login-box-msg">Sign in to start your session</p>
       <form [formGroup]="myForm" novalidate (ngSubmit)="onSubmit(myForm.value, myForm.valid)">
-        <div class="form-group has-feedback">
+        <div class="form-group">
           <input type="text" class="form-control input-lg" placeholder="Username" autofocus style="font-size:20px" formControlName="username"/>
           <control-messages [control]="myForm.controls.username"></control-messages>
         </div>
-        <div class="form-group has-feedback">
+        <div class="form-group">
           <input type="password" class="form-control input-lg" placeholder="Password" style="font-size:20px" formControlName="password"/>
           <control-messages [control]="myForm.controls.password"></control-messages>
         </div>
